==> MuraDaco/mpfw_code_libs_fw2_wrapper_resources/stm32f769_disco/src/rs/rsSerial/v_04/rsSerial.cpp <==
#include <rsSerial.h>
#include "sdk_uart_conf.h"
#include "rsSerial_sdk_uart.h"
#include "sdk_uart_prv/sdk_uart_prv.h"
#include <dgFormatDigit.h>
#define RS485_TX_RX_ENABLE_GPIO_CLK_ENABLE()        __HAL_RCC_GPIOJ_CLK_ENABLE()
#define RS485_TX_ENABLE_GPIO_PORT                   ((GPIO_TypeDef*)GPIOJ)
#define RS485_TX_ENABLE_GPIO_PIN                    ((uint32_t)GPIO_PIN_0) // CN13 - D4 (la numerazione parte da D0 e va in su)
#define RS485_RX_ENABLE_GPIO_PORT                   ((GPIO_TypeDef*)GPIOJ)
#define RS485_RX_ENABLE_GPIO_PIN                    ((uint32_t)GPIO_PIN_1) // CN13 - D2
#define UART_DEMO_MARCO

void rsSerial::TxEnable   (void)  {
    // enable rs485-tx
    HAL_GPIO_WritePin(RS485_TX_ENABLE_GPIO_PORT, RS485_TX_ENABLE_GPIO_PIN, GPIO_PIN_SET);
    // disable rs485-rx
    HAL_GPIO_WritePin(RS485_RX_ENABLE_GPIO_PORT, RS485_RX_ENABLE_GPIO_PIN, GPIO_PIN_SET);

    /* Reset uart process flag */
    UartReady = RESET;
}

void rsSerial::RxEnable   (void)  {
    // disnable rs485-tx
    HAL_GPIO_WritePin(RS485_TX_ENABLE_GPIO_PORT, RS485_TX_ENABLE_GPIO_PIN, GPIO_PIN_RESET);
    // enable rs485-rx
    HAL_GPIO_WritePin(RS485_RX_ENABLE_GPIO_PORT, RS485_RX_ENABLE_GPIO_PIN, GPIO_PIN_RESET);

    /* Reset uart process flag */
    UartReady = RESET;
}

void rsSerial::Tx    (char p_Char)  {
    //cout << p_Char;
    p_Char = 0;
}

void rsSerial::Tx       (uint8_t p_Num)  {
    dgFormatDigit l_FormatNum (&p_Num, 1, DIGIT_NUM_3, dgFormatDigit::kEncoding_Decimal, 0, false);
    l_FormatNum.vValueToString();

    // ******************************************************************************************
    TxEnable();
    
    int l_status = HAL_UART_Transmit_DMA(&UartHandle, (uint8_t* ) l_FormatNum.m_StringValueField, DIGIT_NUM_3);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();
}

void rsSerial::Tx       (uint16_t p_Num)  {
    dgFormatDigit l_FormatNum (&p_Num, 2, DIGIT_NUM_5, dgFormatDigit::kEncoding_Decimal, 0, false);
    l_FormatNum.vValueToString();

    // ******************************************************************************************
    TxEnable();

    int l_status = HAL_UART_Transmit_DMA(&UartHandle, (uint8_t* ) l_FormatNum.m_StringValueField, DIGIT_NUM_5);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();
}

void rsSerial::Tx       (uint32_t p_Num)  {
    dgFormatDigit l_FormatNum (&p_Num, 4, DIGIT_NUM_6, dgFormatDigit::kEncoding_Decimal, 0, false);
    l_FormatNum.vValueToString();

    // ******************************************************************************************
    TxEnable();

    int l_status = HAL_UART_Transmit_DMA(&UartHandle, (uint8_t* ) l_FormatNum.m_StringValueField, DIGIT_NUM_6);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();
}

void rsSerial::Tx       (uint8_t* p_CharBufferTx)  {
	uint8_t l_SizeBuf = 0;
    // determine the size of string
    for(uint8_t i=0;i<254; i++) {
        if(*(p_CharBufferTx+i) == 0) {
            l_SizeBuf = i;
            break;
        }
    }

    // ******************************************************************************************
    TxEnable();

    int l_status = HAL_UART_Transmit_DMA(&UartHandle, p_CharBufferTx, l_SizeBuf);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();
}

void rsSerial::Tx       (char* p_CharBufferTx)  {
	uint8_t l_SizeBuf = 0;
    // determine the size of string
    for(uint8_t i=0;i<254; i++) {
        if(*(p_CharBufferTx+i) == 0) {
            l_SizeBuf = i;
            break;
        }
    }

    // ******************************************************************************************
    TxEnable();

    int l_status = HAL_UART_Transmit_DMA(&UartHandle, (uint8_t* ) p_CharBufferTx, l_SizeBuf);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();
}

void rsSerial::Tx       (char const *p_CharBufferTx)  {
	uint8_t l_SizeBuf = 0;
    // determine the size of string
    for(uint8_t i=0;i<254; i++) {
        if(*(p_CharBufferTx+i) == 0) {
            l_SizeBuf = i;
            break;
        }
    }

    // ******************************************************************************************
    TxEnable();

    int l_status = HAL_UART_Transmit_DMA(&UartHandle, (uint8_t* const) p_CharBufferTx, l_SizeBuf);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();
}

void rsSerial::Tx       (char* p_CharBufferTx, uint8_t p_SizeBuf)  {
    // ******************************************************************************************
    TxEnable();

    int l_status = HAL_UART_Transmit_DMA(&UartHandle, (uint8_t *) p_CharBufferTx, p_SizeBuf);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();
}

void rsSerial::Tx       (uint8_t* p_CharBufferTx, uint8_t p_SizeBuf, uint8_t p_length)  {
    if(p_SizeBuf < p_length) return;
    // ******************************************************************************************
    TxEnable();

    int l_status = HAL_UART_Transmit_DMA(&UartHandle, p_CharBufferTx, p_length);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();
}

void rsSerial::RxStart       (uint8_t* p_CharBufferTx, size_t p_SizeOf, uint8_t p_packet_length)  {
    // ******************************************************************************************
    RxEnable();

	int l_status = HAL_UART_Receive_DMA(&UartHandle, p_CharBufferTx, p_SizeOf);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();

    p_CharBufferTx[p_SizeOf] = 0;
    status = SDK_USART_RX_STATUS__READY_TO_READ;
}

void rsSerial::RxStart       (uint8_t* p_CharBufferTx, size_t p_SizeOf)  {
    // ******************************************************************************************
    RxEnable();

	int l_status = HAL_UART_Receive_DMA(&UartHandle, p_CharBufferTx, p_SizeOf);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();

    p_CharBufferTx[p_SizeOf] = 0;
    status = SDK_USART_RX_STATUS__READY_TO_READ;
}

void rsSerial::RxStart       (char* p_CharBufferTx, size_t p_SizeOf)  {

    // ******************************************************************************************
    RxEnable();

	int l_status = HAL_UART_Receive_DMA(&UartHandle, (uint8_t *)p_CharBufferTx, p_SizeOf);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();
    status = SDK_USART_RX_STATUS__READY_TO_READ;

}

char rsSerial::RxStart    (void)  {
    uint8_t ch = 0;

    // ******************************************************************************************
    RxEnable();

	int l_status = HAL_UART_Receive_DMA(&UartHandle, &ch, 1);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();

    return ch;
}

char rsSerial::Rx    (void)  {
    uint8_t ch = 0;

    // ******************************************************************************************
    RxEnable();

	int l_status = HAL_UART_Receive_DMA(&UartHandle, &ch, 1);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();

    return ch;
}

bool rsSerial::RxCheck     (void)   {
    status = SDK_USART_RX_STATUS__FREE;

    return (SDK_USART_RX_STATUS__READY_TO_READ == status);
}

void rsSerial::Init             (void)      {
    
    // initialization / configuration of MCU register
    
    /* Configure the MPU attributes */
    MPU_Config();
    
    /* Enable the CPU Cache */
    CPU_CACHE_Enable();
    
    /* STM32F7xx_hal.h
        STM32F7xx HAL library initialization:
        - Configure the Flash ART accelerator
        - Systick timer is configured by default as source of time base, but user 
          can eventually implement his proper time base source (a general purpose 
          timer for example or other time source), keeping in mind that Time base 
          duration should be kept 1ms since PPP_TIMEOUT_VALUEs are defined and 
          handled in milliseconds basis.
        - Set NVIC Group Priority to 4
        - Low Level Initialization
       */
    HAL_Init();
    
    /* Configure the system clock to 216 MHz */
    SystemClock_Config();

    /* Configure LED1 & LED2 */
    BSP_LED_Init(LED1);
    BSP_LED_Init(LED2);

    InitUART();
}
