==> MuraDaco/mpfw_code_libs_fw2_wrapper_resources/nxp/src/rs/rsSerial/v_06/rsSerial.cpp <==
#include <rsSerial.h>
#include "fsl_usart.h"
#include "fsl_common.h"
#include "fsl_iocon.h"
#include "pin_mux.h"
#include "fsl_gpio.h"
#include "board.h"
#include <uyProtocol.h>
#include <dgFormatDigit.h>

void rsSerial::Init             (void)      {

    // - step 1
    //      - configuring pins: tx, rx, rs485-enable-tx, rs485-enable-rx
    InitPins_IOCON();
    InitPins_GPIO();

    // - step 2
    //      - configuring UART module

    // - step 2.1.a
    //      - load default configuration
    /*
     * config.baudRate_Bps = 115200U;
     * config.parityMode = kUSART_ParityDisabled;
     * config.stopBitCount = kUSART_OneStopBit;
     * config.loopback = false;
     * config.enableTx = false;
     * config.enableRx = false;
     */
    usart_config_t config;
    USART_GetDefaultConfig(&config);
    // - step 2.1.b
    //      - default configuration customization
    config.baudRate_Bps = 9600;
    config.enableTx     = true;
    config.enableRx     = true;


    // - step 2.2
    //      - enabling and configuring UART
    // - step 2.2.a 
    //      - attach 12 MHz clock to FLEXCOMM4 (USART)
    // . CLOCK_AttachClk
    //      . input
    //          - typedef enum _clock_attach_id / clock_attach_id_t in fsl_clock.h
    //      . register
    //          - SYSCON->MAINCLKSELA / SYSCON->FCLKSEL4 (see Table Table 118 & 157 [UM10912_LPC546xx_User_Manual.pdf])
    CLOCK_AttachClk(DEMO_MARCO_USART_CLOCK_ATTACH);

    // - step 2.2.b 
    //      - enable clock and reset/start UART
    //      - set UART registers based on configuration previously set
    // . CLOCK_EnableClock(s_flexcommClocks[idx]); 
    //      . input 
    //          - typedef enum _clock_ip_name" in fsl_clock.h
    //      . register
    //          - SYSCON->AHBCLKCTRLSET register (see Table Table 118 & 140 [UM10912_LPC546xx_User_Manual.pdf])
    // . RESET_PeripheralReset(s_flexcommResets[idx]);
    //      . input:
    //          - typedef enum _SYSCON_RSTn in fsl_reset.h
    //      . register
    //          - SYSCON->PRESETCTRL / SYSCON->PRESETCTRLSET / SYSCON->PRESETCTRLCLR (see Table Table 118 & 130 [UM10912_LPC546xx_User_Manual.pdf])
    USART_Init(DEMO_MARCO_USART_REG_PTR, &config, DEMO_MARCO_USART_CLK_FREQ  );

    // - step 2.2.c
    //      - enabling and configuring interrupt UART to use a no-blocking tx-rx procedures
    //
    //      - set priority interrupt 
    //  . NVIC_SetPriority
    //      . inputs
    //          - typedef enum IRQn / IRQn_Type in LPC54608.h
    //          - integer in the range of 0...7 (0 max priority / 7 min priority)
    //      . register
    //          - NVIC->IP regiter (see Table 89 & 104 [UM10912_LPC546xx_User_Manual.pdf])
    NVIC_SetPriority(DEMO_MARCO_USART_IRQn, DEMO_MARCO_USART_NVIC_PRIO);

    //      - set handler of the interrupt
    //          - hang the "USART_TransferHandleIRQ" function (fsl_uasart.c) to "FLEXCOMM0_DriverIRQHandler" function (fsl_flexcomm.c)
    //          - N.B.: "FLEXCOMM0_DriverIRQHandler" is called by "FLEXCOMM0_IRQHandler" function (startup_lpc54608.cpp)
    //          - see Table 88 in [UM10912_LPC546xx_User_Manual.pdf] & Table B1-4 in [DDI0403E_e_armv7m_arm.pdf]
    // . EnableIRQ
    //      . input
    //          - typedef enum IRQn / IRQn_Type in LPC54608.h
    //      . register
    //          - NVIC->ISER register (see Table 89 & 90 [UM10912_LPC546xx_User_Manual.pdf])
    USART_TransferCreateHandle(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, TxCallback, &usart_user_data);
    //buffer_init(&callback_protocol_functions);

    // send the first packet 
    Tx("rsSerial v.05 - 20230807 - krInitStatic -> UART init OK\r\nOOO");

}

void rsSerial::TxEnable    (void)  {
    usart_user_data.tx_state = 0;
    // tx enable
    GPIO_PinWrite(GPIO, APP_BOARD_MARCO_TEST_LED2_PORT, APP_BOARD_MARCO_TEST_LED2_PIN, 1);
    // rx disable
    GPIO_PinWrite(GPIO, APP_BOARD_MARCO_TEST_LED3_PORT, APP_BOARD_MARCO_TEST_LED3_PIN, 1);
    
}

void rsSerial::RxEnable    (void)  {

    while(0 == usart_user_data.tx_state){}

    // tx disable
    GPIO_PinWrite(GPIO, APP_BOARD_MARCO_TEST_LED2_PORT, APP_BOARD_MARCO_TEST_LED2_PIN, 0);
    // rx enable
    GPIO_PinWrite(GPIO, APP_BOARD_MARCO_TEST_LED3_PORT, APP_BOARD_MARCO_TEST_LED3_PIN, 0);
}

void rsSerial::Tx    (char p_Char)  {
    p_Char = 0;
}

void rsSerial::Tx       (uint8_t p_Num)  {
    dgFormatDigit l_FormatNum (&p_Num, 1, DIGIT_NUM_3, dgFormatDigit::kEncoding_Decimal, 0, false);
    l_FormatNum.vValueToString();

    if(uyProtocol::status_get_tx__free())   {
        // ------------------------------
        TxEnable();
        //usart_transfer_t xfer = { (uint8_t* ) l_FormatNum.m_StringValueField, DIGIT_NUM_3 };
        //USART_TransferSendNonBlocking(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, &xfer);
        uyProtocol::send_non_blocking((uint8_t* ) l_FormatNum.m_StringValueField);
        USART_tx_enable(DEMO_MARCO_USART_REG_PTR);
        while(0 == usart_user_data.tx_state){}
    }

}

void rsSerial::Tx       (uint16_t p_Num)  {
    dgFormatDigit l_FormatNum (&p_Num, 2, DIGIT_NUM_5, dgFormatDigit::kEncoding_Decimal, 0, false);
    l_FormatNum.vValueToString();

    if(uyProtocol::status_get_tx__free())   {
        // ------------------------------
        TxEnable();
        // usart_transfer_t xfer = { (uint8_t* ) l_FormatNum.m_StringValueField, DIGIT_NUM_5 };
        // USART_TransferSendNonBlocking(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, &xfer);
        uyProtocol::send_non_blocking((uint8_t* ) l_FormatNum.m_StringValueField);
        USART_tx_enable(DEMO_MARCO_USART_REG_PTR);
        while(0 == usart_user_data.tx_state){}
    }
}

void rsSerial::Tx       (uint32_t p_Num)  {
    dgFormatDigit l_FormatNum (&p_Num, 4, DIGIT_NUM_6, dgFormatDigit::kEncoding_Decimal, 0, false);
    l_FormatNum.vValueToString();

    if(uyProtocol::status_get_tx__free())   {
        // ------------------------------
        TxEnable();
        // usart_transfer_t xfer = { (uint8_t* ) l_FormatNum.m_StringValueField, DIGIT_NUM_6 };
        // USART_TransferSendNonBlocking(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, &xfer);
        uyProtocol::send_non_blocking((uint8_t* ) l_FormatNum.m_StringValueField);
        USART_tx_enable(DEMO_MARCO_USART_REG_PTR);
        while(0 == usart_user_data.tx_state){}
    }
}

void rsSerial::Tx       (uint8_t* p_CharBufferTx)  {
	// uint8_t l_SizeBuf = 0;
    // // determine the size of string
    // for(uint8_t i=0;i<254; i++) {
    //     if(*(p_CharBufferTx+i) == 0) {
    //         l_SizeBuf = i;
    //         break;
    //     }
    // }

    if(uyProtocol::status_get_tx__free())   {
        // ------------------------------
        TxEnable();
        // usart_transfer_t xfer = { (uint8_t* ) p_CharBufferTx, l_SizeBuf };
        // USART_TransferSendNonBlocking(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, &xfer);
        uyProtocol::send_non_blocking(p_CharBufferTx);
        USART_tx_enable(DEMO_MARCO_USART_REG_PTR);
        while(0 == usart_user_data.tx_state){}
    }
}

void rsSerial::Tx       (char* p_CharBufferTx)  {
	// uint8_t l_SizeBuf = 0;
    // // determine the size of string
    // for(uint8_t i=0;i<254; i++) {
    //     if(*(p_CharBufferTx+i) == 0) {
    //         l_SizeBuf = i;
    //         break;
    //     }
    // }

    if(uyProtocol::status_get_tx__free())   {
        // ------------------------------
        TxEnable();
        // usart_transfer_t xfer = { (uint8_t* ) p_CharBufferTx, l_SizeBuf };
        // USART_TransferSendNonBlocking(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, &xfer);
        uyProtocol::send_non_blocking(p_CharBufferTx);
        USART_tx_enable(DEMO_MARCO_USART_REG_PTR);
        while(0 == usart_user_data.tx_state){}
    }
}

void rsSerial::Tx       (char const *p_CharBufferTx)  {
	// uint8_t l_SizeBuf = 0;
    // // determine the size of string
    // for(uint8_t i=0;i<254; i++) {
    //     if(*(p_CharBufferTx+i) == 0) {
    //         l_SizeBuf = i;
    //         break;
    //     }
    // }

    if(uyProtocol::status_get_tx__free())   {
        // ------------------------------
        TxEnable();
        // usart_transfer_t xfer = { (uint8_t* ) p_CharBufferTx, l_SizeBuf };
        // USART_TransferSendNonBlocking(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, &xfer);
        uyProtocol::send_non_blocking(p_CharBufferTx);
        USART_tx_enable(DEMO_MARCO_USART_REG_PTR);
        while(0 == usart_user_data.tx_state){}
    }
}

void rsSerial::Tx       (char* p_CharBufferTx, uint8_t p_SizeBuf)  {

    if(uyProtocol::status_get_tx__free())   {
        // ------------------------------
        TxEnable();
        // usart_transfer_t xfer = { (uint8_t* ) p_CharBufferTx, p_SizeBuf };
        // USART_TransferSendNonBlocking(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, &xfer);
        uyProtocol::send_non_blocking((uint8_t*) p_CharBufferTx, p_SizeBuf);
        USART_tx_enable(DEMO_MARCO_USART_REG_PTR);
        while(0 == usart_user_data.tx_state){}
    }
}

void rsSerial::Tx       (uint8_t* p_CharBufferTx, uint8_t p_SizeBuf, uint8_t p_length)  {

    if(uyProtocol::status_get_tx__free())   {
        // ------------------------------
        TxEnable();
        // usart_transfer_t xfer = { (uint8_t* ) p_CharBufferTx, p_SizeBuf };
        // USART_TransferSendNonBlocking(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, &xfer);
        uyProtocol::send_blocking((uint8_t*) p_CharBufferTx, p_SizeBuf, p_length);
        USART_tx_enable(DEMO_MARCO_USART_REG_PTR);
        while(0 == usart_user_data.tx_state){}
    }
}

void rsSerial::RxStart       (uint8_t* p_CharBufferTx, size_t p_SizeOf)  {

    if(uyProtocol::status_get_rx__free())   {

		// ------------------------------
	    RxEnable();
	    // uint8_t l_counter;
	    // usart_transfer_t xfer = { (uint8_t* ) p_CharBufferTx, p_SizeOf };
	    // USART_TransferReceiveNonBlocking(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, &xfer, (size_t *) &l_counter);
        uyProtocol::receive_non_blocking(p_CharBufferTx, p_SizeOf);
        USART_rx_enable(DEMO_MARCO_USART_REG_PTR);

	    //while(SDK_USART_RX_STATUS__READY_TO_READ == t_handle_demo_marco.Status){}

	}
    
}

void rsSerial::RxStart       (char* p_CharBufferTx, size_t p_SizeOf)  {
    // ------------------------------
//    RxEnable();
//    USART_ReadBlocking(DEMO_MARCO_USART_REG_PTR, (uint8_t *) p_CharBufferTx, p_SizeOf);
//    p_CharBufferTx[p_SizeOf] = 0;
//    status = SDK_USART_RX_STATUS__READY_TO_READ;

    if(uyProtocol::status_get_rx__free())   {

		// ------------------------------
	    RxEnable();
	    // uint8_t l_counter;
	    // usart_transfer_t xfer = { (uint8_t* ) p_CharBufferTx, p_SizeOf };
	    // USART_TransferReceiveNonBlocking(DEMO_MARCO_USART_REG_PTR, &t_handle_demo_marco, &xfer, (size_t *) &l_counter);
        uyProtocol::receive_non_blocking(p_CharBufferTx, p_SizeOf);
        USART_rx_enable(DEMO_MARCO_USART_REG_PTR);

	    // while(SDK_USART_RX_STATUS__READY_TO_READ == t_handle_demo_marco.Status){}

	}

}

void rsSerial::RxStart       (uint8_t* p_CharBufferTx, size_t p_SizeOf, uint8_t p_packet_lenght)  {

    if(uyProtocol::status_get_rx__free())   {
        // ------------------------------
        RxEnable();
        USART_ReadBlocking(DEMO_MARCO_USART_REG_PTR, p_CharBufferTx, p_packet_lenght);
        // t_handle_demo_marco.Status = SDK_USART_RX_STATUS__READY_TO_READ;
        uyProtocol::status_set_rx__completed();
    }

}

char rsSerial::Rx    (void)  {
    uint8_t ch = 0;

    if(uyProtocol::status_get_rx__free())   {
        // ------------------------------
        RxEnable();
        // USART_ReadBlocking(DEMO_MARCO_USART_REG_PTR, &ch, 1);
        uyProtocol::receive_non_blocking(&ch, 1, 1);
        USART_rx_enable(DEMO_MARCO_USART_REG_PTR);

        // t_handle_demo_marco.Status = SDK_USART_RX_STATUS__READY_TO_READ;
        uyProtocol::status_set_rx__completed();
    }

    return ch;
}

char rsSerial::RxStart    (void)  {
    uint8_t ch = 0;

    if(uyProtocol::status_get_rx__free())   {
        // ------------------------------
        RxEnable();
        // USART_ReadBlocking(DEMO_MARCO_USART_REG_PTR, &ch, 1);
        uyProtocol::receive_non_blocking(&ch, 1, 1);
        USART_rx_enable(DEMO_MARCO_USART_REG_PTR);

        uyProtocol::status_set_rx__completed();
    }

    return ch;
}

bool rsSerial::RxCheck     (void)   {
    if(uyProtocol::status_get_rx__completed())   {
        uyProtocol::status_set_rx__free();
        return true;
    }


    return false;
}
